--- a/team/이광렬_영화평점/package.json
+++ b/team/이광렬_영화평점/package.json
@@ -10,8 +10,11 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.10",
     "styled-reset": "^4.4.7",
     "web-vitals": "^2.1.4"
